<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Updating tag: </string>
    <string name="app_name">SC Tracker</string>
    <string name="delete_menu">Delete Photo</string>
    <string name="project_name">Skin Condition Tracker</string>
    <string name="takenewphoto">Take A New Photo</string>
    <string name="tag_instructions">Please enter a tag for the new photo:</string>
    <string name="ok_button">OK</string>
    <string name="tag_completion_hint">e.g. mole on right hand</string>
    <string name="menu_prefs_title">Preferences</string>
    <string name="first_time_dialog_title">Welcome to Skin Condition Tracker!</string>
    <string name="first_time_dialog_set_password"></string>
    <string name="first_time_message">
        Press the Camera button to begin. You can also password protect
        your photos. See Menu --> Help for more information.
    </string>
    <string name="empty_gallery">No photos yet :\'(</string>
    <string name="change_password_message">Change Password</string>
    <string name="menu_lock_title">Lock Application</string>
    <string name="unlock_button">Unlock</string>
    <string name="locked_app_message">SC Tracker is Locked</string>
    <string name="verify_password_message">Please Verify Your Password</string>
    <string name="password_label">Password:</string>
    <string name="new_password_label">New Password:</string>
    <string name="verify_password_label">Verify Password:</string>
     <string name="old_password_label">Old Password:</string>
    <string name="new_password_message">Adding New Password</string>
    <string name="archive_button">Archive</string>
    <string name="search_results">Search Results: </string>
    <string name="menu_search">Search</string>
    <string name="search_instructions">Search Results</string>
    <string name="search_label">Tag</string>
    <string name="settings_description">Photos</string>
    <string name="menu_help_title">Help</string>

</resources>
