<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_message"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_password_label" >
    </TextView>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_password_label"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" >
   </TextView>

    <EditText
        android:id="@+id/verifyPassword1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/addPasswordButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor = "#00ff00"
        android:text="@string/ok_button" />

    <TextView
        android:id="@+id/statusLabelAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal" />

</LinearLayout>