<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.89"
            android:paddingLeft="11dp"
            android:paddingRight="10dp"
            android:text="@string/tag_instructions"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_completion_hint"
            android:maxLength="40" >
        </AutoCompleteTextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="114dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ok_button" />

    </LinearLayout>

</LinearLayout>